@@ -1,5 +1,5 @@
 -server
--Xmx1G
+-Xmx3G
 -XX:InitialRAMPercentage=80
 -XX:MaxRAMPercentage=80
 -XX:+ExitOnOutOfMemoryError
@@ -7,7 +7,8 @@
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -Djdk.attach.allowAttachSelf=true
-# OTel: uncomment when observability/otel-javaagent.jar is present
-# -javaagent:/etc/trino/otel/opentelemetry-javaagent.jar
-# -Dotel.service.name=trino
-# -Dotel.exporter.otlp.endpoint=http://otel-collector:4317
+--add-modules=jdk.incubator.vector
+-javaagent:/etc/trino/otel/opentelemetry-javaagent.jar
+-Dotel.service.name=federation-engine
+-Dotel.exporter.otlp.endpoint=http://otel-collector:4317
+-Dotel.exporter.otlp.protocol=grpc
